--- a/Mask.ipynb
+++ b/Mask.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnf4q5KbjcLoyLWPFrUuo+",
+      "authorship_tag": "ABX9TyOc7+ja875ztZreEKeNje7P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,23 +28,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9kZRwfAmZOkE",
-        "outputId": "24e6477d-b190-416e-ffa2-93a06555c206"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'臺北市': 340, '高雄市': 424, '臺中市': 436, '臺南市': 280, '基隆市': 57, '新竹市': 39, '嘉義市': 67, '新北市': 507, '桃園市': 271, '新竹縣': 48, '宜蘭縣': 76, '苗栗縣': 57, '彰化縣': 181, '南投縣': 67, '雲林縣': 131, '嘉義縣': 84, '屏東縣': 140, '澎湖縣': 11, '花蓮縣': 47, '臺東縣': 23, '金門縣': 6, '連江縣': 1}\n"
-          ]
-        }
-      ],
       "source": [
         "import json\n",
         "import requests\n",
@@ -58,25 +41,47 @@
         "\n",
         "# 解析 json 格式的資料，變成成字典\n",
         "data = json.loads(d)\n",
-        "\n",
         "print(data)\n",
         "\n",
         "# 計算藥局的數量\n",
-        "mask_count = {}\n",
+        "pharm_count = {}\n",
         "\n",
         "# 取出每一筆解析出來的，\n",
         "for d in data['features']:\n",
         "    # 有些 county 為空值，因此取地址的前三個字\n",
         "    county = d['properties']['address'][0:3]\n",
-        "    # 若城市沒有出現在 mask_count 裡，建立新的key，並賦予 1\n",
-        "    if county not in mask_count:\n",
-        "        mask_count[county] = 1\n",
-        "    # 若城市已經在 mask_count 裡。則 +1\n",
+        "    # 若城市沒有出現在 pharm_count 裡，建立新的key，並賦予 1\n",
+        "    if county not in pharm_count:\n",
+        "        pharm_count[county] = 1\n",
+        "    # 若城市已經在 pharm_count 裡。則 +1\n",
         "    else:\n",
-        "        mask_count[county] += 1\n",
+        "        pharm_count[county] += 1\n",
+        "print(pharm_count)\n",
         "\n",
-        "print(mask_count)\n"
-      ]
+        "#計算大人的口罩數量\n",
+        "mask_count = {}\n",
+        "\n",
+        "\n",
+        "for d in data['features']:\n",
+        "    county = d['properties']['address'][0:3]\n",
+        "    # 取得的大人的口罩數量\n",
+        "    mask_adult = d['properties']['mask_adult']\n",
+        "    if county not in mask_count:\n",
+        "        mask_count[county] = mask_adult\n",
+        "    else:\n",
+        "        mask_count[county] += mask_adult\n",
+        "\n",
+        "# 依照口罩剩餘的數量，從多到少排序\n",
+        "mask_count = dict(sorted(mask_count.items(), key=lambda item: item[1], reverse=True))\n",
+        "\n",
+        "print(mask_count)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ojbI5WHetSLY"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
