將整理好的藥局間數資料，儲存到 SQLite 資料中

--- a/Mask.ipynb
+++ b/Mask.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOc7+ja875ztZreEKeNje7P",
+      "authorship_tag": "ABX9TyNLwQMMCqOvJiRuDRknT3GN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,6 @@
         "#計算大人的口罩數量\n",
         "mask_count = {}\n",
         "\n",
-        "\n",
         "for d in data['features']:\n",
         "    county = d['properties']['address'][0:3]\n",
         "    # 取得的大人的口罩數量\n",
@@ -74,14 +73,67 @@
         "# 依照口罩剩餘的數量，從多到少排序\n",
         "mask_count = dict(sorted(mask_count.items(), key=lambda item: item[1], reverse=True))\n",
         "\n",
-        "print(mask_count)\n",
-        "\n"
+        "print(mask_count)\n"
       ],
       "metadata": {
         "id": "ojbI5WHetSLY"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "import sqlite3\n",
+        "import datetime\n",
+        "\n",
+        "# 建立資料庫\n",
+        "conn = sqlite3.connect('example.db')\n",
+        "# 創建連結\n",
+        "c = conn.cursor()\n",
+        "\n",
+        "# 新增且清空資料夾\n",
+        "c.execute('''\n",
+        "CREATE TABLE IF NOT EXISTS pharmacies\n",
+        "          (city text,\n",
+        "          counts text,\n",
+        "          createdAt\n",
+        "          datetime)\n",
+        "''')\n",
+        "c.execute('''DELETE FROM pharmacies''')\n",
+        "conn.commit()\n",
+        "\n",
+        "# 新增資料\n",
+        "for city, count in pharm_count.items():\n",
+        "  t = datetime.datetime.now()\n",
+        "  c.execute(f\"INSERT INTO pharmacies VALUES ('{city}',{count},'{t}')\")\n",
+        "  conn.commit()\n",
+        "\n",
+        "# 查詢資料\n",
+        "c.execute(\"SELECT * FROM pharmacies\")\n",
+        "print(c.fetchall())\n",
+        "\n",
+        "conn.commit()\n",
+        "conn.close()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t0azBEbR5w97",
+        "outputId": "a9cea0b2-541c-4786-cb98-8aa51688b4db"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('臺北市', '340', '2024-09-16 04:04:03.784496'), ('高雄市', '424', '2024-09-16 04:04:03.793205'), ('臺中市', '436', '2024-09-16 04:04:03.802118'), ('臺南市', '280', '2024-09-16 04:04:03.811924'), ('基隆市', '57', '2024-09-16 04:04:03.820904'), ('新竹市', '39', '2024-09-16 04:04:03.830100'), ('嘉義市', '67', '2024-09-16 04:04:03.840162'), ('新北市', '507', '2024-09-16 04:04:03.849230'), ('桃園市', '271', '2024-09-16 04:04:03.857995'), ('新竹縣', '48', '2024-09-16 04:04:03.867669'), ('宜蘭縣', '76', '2024-09-16 04:04:03.876443'), ('苗栗縣', '57', '2024-09-16 04:04:03.885510'), ('彰化縣', '181', '2024-09-16 04:04:03.895951'), ('南投縣', '67', '2024-09-16 04:04:03.905290'), ('雲林縣', '131', '2024-09-16 04:04:03.914458'), ('嘉義縣', '84', '2024-09-16 04:04:03.923506'), ('屏東縣', '140', '2024-09-16 04:04:03.932730'), ('澎湖縣', '11', '2024-09-16 04:04:03.942343'), ('花蓮縣', '47', '2024-09-16 04:04:03.952205'), ('臺東縣', '23', '2024-09-16 04:04:03.962244'), ('金門縣', '6', '2024-09-16 04:04:03.971467'), ('連江縣', '1', '2024-09-16 04:04:03.980767')]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
