用 jieba 的分詞來統計新聞中出現的字詞。

--- a/news.ipynb
+++ b/news.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrSKUb3pzqBnpiwSTjm4t5",
+      "authorship_tag": "ABX9TyNXmNC8wTFOcAJJTxK289gQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,6 +72,67 @@
         "print(get_news)\n",
         ""
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 安裝 jieba 套件\n",
+        "!pip install jieba\n",
+        "\n",
+        "# 下載官方字典檔\n",
+        "!wget https://raw.githubusercontent.com/fxsjy/jieba/master/extra_dict/dict.txt.big\n",
+        "\n",
+        "# 載入套件與字典檔\n",
+        "import jieba\n",
+        "jieba.load_userdict(\"dict.txt.big\")"
+      ],
+      "metadata": {
+        "id": "a_dParp_0rF3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 精準模式斷詞\n",
+        "news_word = {}\n",
+        "\n",
+        "for d in get_news:\n",
+        "    # token = d 的斷詞結果\n",
+        "    token = list(jieba.cut(d, HMM=False))\n",
+        "    for i in token:\n",
+        "        if i not in news_word:\n",
+        "          news_word[i] = 1\n",
+        "        else:\n",
+        "          news_word[i] += 1\n",
+        "\n",
+        "print(news_word)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cHK1s9Ox1Y7t",
+        "outputId": "f372b6ae-e2e3-43a5-954e-0e1a12ef116a"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'根據': 4, '模式': 2, '觀測': 4, '，': 160, '目前': 5, '南海': 2, '至': 4, '菲律賓': 5, '東方': 2, '到': 3, '2': 9, '個': 6, '低氣壓': 12, '日本': 5, '氣象廳': 5, '資料': 3, '指出': 4, '位於': 5, '東南方': 2, '外海': 2, '的': 35, '今晚': 7, '將': 10, '增強': 6, '為': 17, '熱帶性': 8, '預估': 3, '有': 13, '機會': 4, '在': 17, '24': 2, '小時': 4, '內': 2, '形成': 2, '颱風': 20, '成': 3, '今年': 5, '第': 9, '14': 5, '號': 8, '「': 16, '葡萄': 9, '桑': 9, '」': 16, '；': 5, '中央': 2, '氣象': 9, '署': 9, '則': 1, '表示': 5, '明天': 3, '清晨': 1, '上午': 1, '可能': 3, '台': 5, '灣': 4, '北東': 3, '帶來': 4, '間接性': 1, '雨勢': 3, '。': 26, ' ': 110, '\\r': 18, '若': 2, '生成': 2, '（': 5, 'Pulasan': 2, '馬來西亞': 2, '提供': 3, '水果': 2, '名': 2, '）': 5, '而': 3, '我國': 1, '顯示': 1, '16': 6, 'TD': 1, '今': 3, '下午': 3, '時': 6, '中心': 6, '位置': 3, '北緯': 2, '12': 5, '.': 4, '8': 4, '度': 4, '東經': 2, '143': 2, '4': 3, '以': 5, '每': 2, '公里': 3, '速度': 2, '向東': 2, '進行': 2, '氣壓': 2, '1004': 1, '百': 2, '帕': 2, '近': 3, '最大': 4, '風速': 2, '每秒': 4, '公尺': 4, '瞬間': 2, '陣風': 2, '20': 4, '預報員': 2, '張': 4, '裕': 2, '堯': 4, '說': 7, '未來': 4, '1': 1, '周': 1, '海面': 3, '屬於': 1, '大': 6, '低壓': 2, '帶': 1, '不': 3, '穩定': 1, '環境': 1, '排除': 1, '或': 2, '離': 1, '較遠': 1, '發展': 2, '後續': 1, '路徑': 8, '朝西北': 1, '西方': 2, '向': 4, '接近': 2, '沖繩': 1, '預報': 1, '移動': 4, '與': 4, '貝': 4, '碧': 4, '佳': 4, '類似': 2, '西北方': 1, '向往': 1, '琉球': 4, '群': 2, '島': 2, '進入': 1, '東海': 2, '方向': 1, '是': 16, '這樣': 1, '會': 7, '北部': 3, '、': 23, '東半': 2, '部': 2, '間歇性': 2, '沿海': 1, '長': 2, '浪': 2, '出現': 1, '但': 4, '仍': 2, '不確定性': 2, '持續': 3, '密切': 1, '觀察': 2, '就是': 1, '中秋節': 7, '相傳': 2, '也': 12, '土地公': 9, '生日': 3, '民俗': 1, '專家': 1, '廖': 3, '乙': 3, '虎': 2, '馬': 2, '猴': 2, '3': 5, '生肖': 6, '可望': 1, '中秋': 3, '開始': 2, '鴻運': 3, '開': 3, '犯': 4, '太歲': 5, '龍': 3, '狗': 2, '牛': 2, '羊': 2, '兔': 2, '漸': 1, '甩': 2, '悶': 1, '鍋': 1, '不妨': 1, '把握': 3, '時機': 1, '準備': 3, '月餅': 2, '百香果': 3, '拜': 4, '能': 5, '用': 1, '柚': 2, '倒': 2, '好運來': 2, '讓': 2, '運勢': 3, '好上加好': 1, '土地': 1, '公有': 1, '分別': 1, '農曆': 2, '月': 7, '初二': 1, '頭': 1, '牙': 1, '封神': 1, '之': 2, '日': 7, '15': 2, '以及': 2, '尾牙': 1, '幫': 2, '作': 1, '壽': 1, '兼': 1, '祈求': 2, '財運': 1, '因此': 1, '除了': 2, '祖先': 1, '去': 3, '自身': 1, '加持': 1, '尤其': 2, '從中': 1, '秋節': 1, '正': 3, '能量': 2, '爆棚': 1, '財運亨通': 1, '甲辰': 1, '年': 11, '沖': 3, '肖': 3, '者': 4, '偏': 1, '害': 1, '5': 2, '再': 2, '過後': 2, '漸入佳境': 1, '慢慢': 1, '無': 1, '春': 1, '青龍': 1, '沉悶': 1, '不順遂': 1, '氣場': 2, '建議': 1, '好': 3, '祈福': 1, '求': 1, '好運': 1, '就要': 1, '可': 2, '利用': 1, '祂': 1, '祝壽': 2, '供品': 1, '麻': 1, '糬': 1, '等': 2, '圓': 1, '食物': 1, '帶有': 1, '圓滿': 1, '寓意': 1, '又': 1, '語': 1, '諧音': 1, '事': 2, '結果': 2, '最佳': 1, '諸事': 1, '此外': 2, '當天': 1, '透過': 3, '自己': 3, '開運': 1, '祈願': 1, '其': 2, '作法': 1, '很': 1, '簡單': 1, '只要': 1, '柚子': 4, '紅紙': 3, '跟': 1, '筆': 1, '首先': 1, '心願': 2, '寫': 1, '上': 4, '然後': 1, '底部': 1, '挖': 1, '小洞': 1, '塞進': 1, '之後': 2, '把': 1, '倒栽蔥': 1, '埋': 1, '進': 1, '土': 1, '裡': 1, '有助': 1, '迎來': 1, '兆頭': 1, '他': 13, '提醒': 1, '誠心': 1, '祝禱': 1, '捐血': 1, '布施': 1, '來': 1, '行善': 1, '積': 1, '福報': 1, '引來': 1, '加速': 1, '甩開': 1, '陰霾': 1, '撥雲見日': 1, '招來': 1, '財富': 1, '及': 6, '好運氣': 1, '間': 2, '發': 4, '布': 4, '關島': 3, '附近': 5, '預測': 2, '往': 2, '北北東': 2, '轉': 2, '西北': 3, '朝': 3, '海域': 2, '西太平洋': 1, '包含': 1, '剛剛': 1, '9': 1, '50': 1, '分': 1, '原': 1, '於今': 1, '晚間': 1, '輕度': 2, '編號': 1, '竣': 2, '已': 2, '台北': 1, '東北方': 1, '約': 3, '720': 1, '前進': 2, '預計': 2, '上半天': 1, '登陸': 2, '中國': 1, '上海': 1, '一帶': 2, '部分': 1, '官': 1, '網': 1, '1000': 1, '23': 1, '周四': 1, '19': 1, '最': 1, '雖': 1, '沒': 1, '直接': 1, '影響': 3, '偏向': 1, '浙江': 1, '外圍': 1, '水氣': 1, '迎風': 1, '面': 1, '間接': 1, '需': 1, '圖': 2, '／': 3, '翻': 2, '攝': 2, '自': 3, '近日': 3, '高': 11, '雄': 14, '國賓飯店': 3, '重建': 4, '案': 4, '容積率': 4, '破': 1, '千': 2, '遠': 4, 'THE': 4, 'ONE': 4, '大樓': 4, '逾': 1, '容積': 11, '獎勵': 9, '引發': 1, '外界': 1, '關注': 1, '曾': 2, '任': 2, '市長': 9, '前': 2, '副': 3, '總統': 2, '吳敦義': 11, '受不了': 1, '質疑': 2, '言論': 1, '今天': 2, '臉': 1, '書': 1, '發聲': 2, '有關': 1, '國賓': 3, '核定': 3, '說法': 1, '完全': 1, '胡言亂語': 1, '一派胡言': 1, '政策': 1, '卸任': 4, '才': 5, '上路': 2, '這': 1, '兩案': 1, '怎': 1, '扯': 1, '關係': 1, '建築': 2, '確屬': 1, '地方': 2, '首長': 2, '權': 1, '1981': 1, '民國': 3, '70': 1, '開幕': 1, '營業': 1, '於': 1, '1990': 1, '6': 1, '18': 1, '服務': 1, '1998': 1, '25': 1, '決定': 1, '2020': 1, '距離': 1, '1142': 1, '％': 2, '更是': 1, '取得': 4, '這時': 1, '我': 1, '無官一身輕': 1, '什麼': 1, '權力': 2, '？': 2, '2950': 1, '被': 2, '親': 1, '綠': 1, '粉': 1, '專': 1, '該案': 1, '建': 2, '照': 2, '1993': 1, '年前': 2, '選擇': 1, '參照': 1, '舊制': 1, '法規': 1, '當時': 1, '那': 1, '歪曲事實': 1, '謊言': 1, '！': 1, '氣憤': 1, '凡': 1, '普通': 1, '常識': 1, '皆知': 1, '政府': 1, '核發': 1, '執照': 1, '一定': 2, '期限': 1, '業主': 1, '後': 2, '必須': 1, '規定': 1, '期間': 1, '開工': 2, '施工': 1, '完工': 2, '如果': 1, '當': 2, '就': 3, '任內': 1, '興建': 1, '它': 1, '那麼': 1, '施工期': 1, '長達': 1, '以上': 1, '全世界': 1, '現在': 1, '應該': 1, '還': 1, '沒有': 2, '一棟': 1, '可以': 1, '蓋': 1, '這麼久': 1, '吧': 1, '印象': 1, '建物': 3, '辦法': 2, '應': 1, '88': 2, '施行': 2, '那時': 2, '早已': 2, '不當': 2, '時代': 1, '並': 1, '所謂': 1, '自然': 1, '不會': 1, '發生': 1, '超乎': 1, '常情': 1, '爭議': 1, '南': 2, '辦': 2, '執行長': 1, '林': 1, '清': 3, '強': 1, '已經': 1, '離開': 1, '幾年': 1, '吳': 2, '對於': 1, '無端': 1, '捲入': 1, '紛爭': 1, '相當': 1, '不滿': 1, '因': 1, '只': 1, '媒體': 1, '名嘴': 1, '電視': 1, '隱射': 1, '批評': 1, '連': 1, '貓': 1, '空': 1, '爬山': 1, '山': 1, '友': 1, '詢問': 1, '忍不住': 1, '發文': 1, '無關': 1, '記者': 1, '徐': 1, '白': 1, '櫻': 1, '強調': 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "9x_qGZ6z1uk3"
+      }
     }
   ]
 }
