將統計出來的字詞，依照出現的頻率，從高到低排序。

--- a/news.ipynb
+++ b/news.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXmNC8wTFOcAJJTxK289gQ",
+      "authorship_tag": "ABX9TyO20StpvM4H2531PT1jjZAn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,11 +128,28 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "news_word = dict(sorted(news_word.items(),key=lambda i: i[1], reverse=True))\n",
+        "print(news_word)"
+      ],
       "metadata": {
-        "id": "9x_qGZ6z1uk3"
-      }
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z4EvqG8H41lE",
+        "outputId": "2c382134-35ef-41eb-e783-6082245f5f5e"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'，': 160, ' ': 110, '的': 35, '。': 26, '、': 23, '颱風': 20, '\\r': 18, '在': 17, '為': 17, '「': 16, '」': 16, '是': 16, '雄': 14, '他': 13, '有': 13, '也': 12, '低氣壓': 12, '吳敦義': 11, '容積': 11, '年': 11, '高': 11, '將': 10, '2': 9, '土地公': 9, '市長': 9, '桑': 9, '氣象': 9, '獎勵': 9, '第': 9, '署': 9, '葡萄': 9, '熱帶性': 8, '號': 8, '路徑': 8, '中秋節': 7, '今晚': 7, '日': 7, '會': 7, '月': 7, '說': 7, '16': 6, '中心': 6, '個': 6, '及': 6, '增強': 6, '大': 6, '時': 6, '生肖': 6, '12': 5, '14': 5, '3': 5, '今年': 5, '以': 5, '位於': 5, '台': 5, '太歲': 5, '才': 5, '日本': 5, '氣象廳': 5, '目前': 5, '能': 5, '菲律賓': 5, '表示': 5, '附近': 5, '（': 5, '）': 5, '；': 5, '.': 4, '20': 4, '8': 4, 'ONE': 4, 'THE': 4, '上': 4, '但': 4, '佳': 4, '公尺': 4, '卸任': 4, '取得': 4, '向': 4, '堯': 4, '大樓': 4, '容積率': 4, '小時': 4, '布': 4, '帶來': 4, '度': 4, '張': 4, '拜': 4, '指出': 4, '最大': 4, '未來': 4, '柚子': 4, '根據': 4, '案': 4, '機會': 4, '每秒': 4, '灣': 4, '犯': 4, '琉球': 4, '發': 4, '碧': 4, '移動': 4, '者': 4, '至': 4, '與': 4, '觀測': 4, '貝': 4, '遠': 4, '重建': 4, '4': 3, '下午': 3, '不': 3, '中秋': 3, '乙': 3, '今': 3, '位置': 3, '公里': 3, '到': 3, '副': 3, '北東': 3, '北部': 3, '去': 3, '可能': 3, '國賓': 3, '國賓飯店': 3, '好': 3, '就': 3, '廖': 3, '建物': 3, '影響': 3, '成': 3, '把握': 3, '持續': 3, '提供': 3, '明天': 3, '朝': 3, '核定': 3, '正': 3, '民國': 3, '沖': 3, '海面': 3, '清': 3, '準備': 3, '生日': 3, '百香果': 3, '約': 3, '紅紙': 3, '而': 3, '肖': 3, '自': 3, '自己': 3, '西北': 3, '資料': 3, '近': 3, '近日': 3, '透過': 3, '運勢': 3, '開': 3, '關島': 3, '雨勢': 3, '預估': 3, '鴻運': 3, '龍': 3, '／': 3, '143': 2, '15': 2, '24': 2, '5': 2, '88': 2, 'Pulasan': 2, '一定': 2, '一帶': 2, '上路': 2, '不當': 2, '不確定性': 2, '中央': 2, '之': 2, '之後': 2, '事': 2, '今天': 2, '仍': 2, '以及': 2, '任': 2, '低壓': 2, '倒': 2, '兔': 2, '內': 2, '其': 2, '再': 2, '前': 2, '前進': 2, '北北東': 2, '北緯': 2, '千': 2, '南': 2, '南海': 2, '可': 2, '名': 2, '向東': 2, '吳': 2, '圖': 2, '地方': 2, '外海': 2, '好運來': 2, '完工': 2, '尤其': 2, '島': 2, '已': 2, '帕': 2, '幫': 2, '年前': 2, '建': 2, '建築': 2, '形成': 2, '往': 2, '後': 2, '心願': 2, '或': 2, '接近': 2, '攝': 2, '施行': 2, '早已': 2, '曾': 2, '月餅': 2, '東半': 2, '東南方': 2, '東方': 2, '東海': 2, '東經': 2, '柚': 2, '模式': 2, '權力': 2, '此外': 2, '每': 2, '氣場': 2, '氣壓': 2, '水果': 2, '沒有': 2, '浪': 2, '海域': 2, '照': 2, '牛': 2, '狗': 2, '猴': 2, '生成': 2, '甩': 2, '當': 2, '登陸': 2, '發展': 2, '發聲': 2, '百': 2, '相傳': 2, '瞬間': 2, '祈求': 2, '祝壽': 2, '竣': 2, '等': 2, '結果': 2, '總統': 2, '羊': 2, '群': 2, '翻': 2, '能量': 2, '若': 2, '虎': 2, '被': 2, '裕': 2, '西方': 2, '觀察': 2, '讓': 2, '質疑': 2, '輕度': 2, '轉': 2, '辦': 2, '辦法': 2, '農曆': 2, '速度': 2, '進行': 2, '過後': 2, '那時': 2, '部': 2, '長': 2, '開始': 2, '開工': 2, '間': 2, '間歇性': 2, '陣風': 2, '除了': 2, '預報員': 2, '預測': 2, '預計': 2, '類似': 2, '風速': 2, '首長': 2, '馬': 2, '馬來西亞': 2, '％': 2, '？': 2, '1': 1, '1000': 1, '1004': 1, '1142': 1, '18': 1, '19': 1, '1981': 1, '1990': 1, '1993': 1, '1998': 1, '2020': 1, '23': 1, '25': 1, '2950': 1, '50': 1, '6': 1, '70': 1, '720': 1, '9': 1, 'TD': 1, '一棟': 1, '一派胡言': 1, '上午': 1, '上半天': 1, '上海': 1, '不妨': 1, '不會': 1, '不滿': 1, '不順遂': 1, '並': 1, '中國': 1, '什麼': 1, '以上': 1, '任內': 1, '作': 1, '作法': 1, '來': 1, '供品': 1, '倒栽蔥': 1, '偏': 1, '偏向': 1, '兆頭': 1, '全世界': 1, '兩案': 1, '公有': 1, '兼': 1, '凡': 1, '出現': 1, '分': 1, '分別': 1, '初二': 1, '利用': 1, '則': 1, '剛剛': 1, '加持': 1, '加速': 1, '包含': 1, '印象': 1, '原': 1, '參照': 1, '又': 1, '友': 1, '受不了': 1, '只': 1, '只要': 1, '可以': 1, '可望': 1, '台北': 1, '名嘴': 1, '向往': 1, '吧': 1, '周': 1, '周四': 1, '因': 1, '因此': 1, '圓': 1, '圓滿': 1, '土': 1, '土地': 1, '埋': 1, '執照': 1, '執行長': 1, '塞進': 1, '壽': 1, '外圍': 1, '外界': 1, '好上加好': 1, '好運': 1, '好運氣': 1, '如果': 1, '媒體': 1, '它': 1, '完全': 1, '官': 1, '害': 1, '密切': 1, '寓意': 1, '寫': 1, '封神': 1, '專': 1, '專家': 1, '對於': 1, '小洞': 1, '就是': 1, '就要': 1, '尾牙': 1, '屬於': 1, '山': 1, '已經': 1, '布施': 1, '帶': 1, '帶有': 1, '常情': 1, '常識': 1, '幾年': 1, '底部': 1, '建議': 1, '引來': 1, '引發': 1, '強': 1, '強調': 1, '很': 1, '後續': 1, '徐': 1, '從中': 1, '必須': 1, '忍不住': 1, '怎': 1, '悶': 1, '慢慢': 1, '應': 1, '應該': 1, '我': 1, '我國': 1, '所謂': 1, '扯': 1, '批評': 1, '把': 1, '招來': 1, '挖': 1, '捐血': 1, '捲入': 1, '排除': 1, '提醒': 1, '撥雲見日': 1, '政府': 1, '政策': 1, '方向': 1, '於': 1, '於今': 1, '施工': 1, '施工期': 1, '春': 1, '時代': 1, '時機': 1, '晚間': 1, '普通': 1, '更是': 1, '書': 1, '最': 1, '最佳': 1, '有助': 1, '有關': 1, '服務': 1, '朝西北': 1, '期間': 1, '期限': 1, '東北方': 1, '林': 1, '核發': 1, '業主': 1, '櫻': 1, '權': 1, '歪曲事實': 1, '民俗': 1, '氣憤': 1, '水氣': 1, '求': 1, '決定': 1, '沉悶': 1, '沒': 1, '沖繩': 1, '沿海': 1, '法規': 1, '浙江': 1, '清晨': 1, '漸': 1, '漸入佳境': 1, '無': 1, '無官一身輕': 1, '無端': 1, '無關': 1, '然後': 1, '營業': 1, '爆棚': 1, '爬山': 1, '爭議': 1, '牙': 1, '現在': 1, '環境': 1, '用': 1, '甩開': 1, '甲辰': 1, '當天': 1, '當時': 1, '發文': 1, '發生': 1, '白': 1, '皆知': 1, '直接': 1, '相當': 1, '破': 1, '確屬': 1, '祂': 1, '祈福': 1, '祈願': 1, '祖先': 1, '祝禱': 1, '福報': 1, '秋節': 1, '積': 1, '穩定': 1, '空': 1, '筆': 1, '簡單': 1, '粉': 1, '糬': 1, '紛爭': 1, '綠': 1, '網': 1, '編號': 1, '胡言亂語': 1, '臉': 1, '自然': 1, '自身': 1, '興建': 1, '舊制': 1, '蓋': 1, '行善': 1, '裡': 1, '西北方': 1, '西太平洋': 1, '規定': 1, '親': 1, '言論': 1, '記者': 1, '詢問': 1, '該案': 1, '語': 1, '誠心': 1, '說法': 1, '諧音': 1, '諸事': 1, '謊言': 1, '貓': 1, '財富': 1, '財運': 1, '財運亨通': 1, '超乎': 1, '距離': 1, '跟': 1, '較遠': 1, '迎來': 1, '迎風': 1, '這': 1, '這時': 1, '這樣': 1, '這麼久': 1, '連': 1, '進': 1, '進入': 1, '逾': 1, '選擇': 1, '還': 1, '那': 1, '那麼': 1, '部分': 1, '鍋': 1, '長達': 1, '開幕': 1, '開運': 1, '間接': 1, '間接性': 1, '關係': 1, '關注': 1, '陰霾': 1, '隱射': 1, '雖': 1, '離': 1, '離開': 1, '電視': 1, '需': 1, '青龍': 1, '面': 1, '預報': 1, '頭': 1, '顯示': 1, '食物': 1, '首先': 1, '麻': 1, '！': 1}\n"
+          ]
+        }
+      ]
     }
   ]
 }
